# lattice

./: .gitignore  CLAUDE.md  Decisions.md  README.md  SOUL.md  pyproject.toml
docs/: guide-import-export.md  integration-claude-code.md  integration-openclaw.md  mcp-listing.md  needs-human-and-next-guide.md  user-guide.md  user-reference.md
docs/architecture/: cli-command-structure.md  completion-policies.md  event-system.md  snapshot-materialization.md
docs/images/: demo-timelapse.webm
site/src/layouts/: Base.astro
skills/delegator-example/: SKILL.md
skills/lattice/: SKILL.md
skills/lattice/references/: multi-agent-guide.md
src/lattice/: agent_runner.py  update_check.py
src/lattice/cli/: archive_cmds.py  artifact_cmds.py  auto_review.py  c11_bridge.py  claim_cmd.py  cmux_bridge.py  dashboard_cmd.py  demo_cmd.py  file_cmds.py  flag_cmds.py  helpers.py  main.py  migration_cmds.py  query_cmds.py  review_cmds.py  task_cmds.py  wait_cmd.py  watch_cmd.py  weather_cmds.py
src/lattice/core/: agent_spawn.py  auto_review.py  config.py  event_stream.py  events.py  ids.py  next.py  review.py  tasks.py
src/lattice/dashboard/: server.py
src/lattice/dashboard/static/: cube-v2.css  cube-v2.js  cube3d.js  index.html
src/lattice/integrations/: __init__.py  c11.py  cmux.py  terminal.py
src/lattice/mcp/: resources.py  server.py  tools.py
src/lattice/skills/lattice/: SKILL.md
src/lattice/skills/lattice/references/: multi-agent-guide.md  worktree-guide.md
src/lattice/storage/: agent_spawn.py  fs.py  readers.py
src/lattice/templates/: __init__.py  claude_md_block.py  code_review_prompt.py  plan_review_prompt.py
tests/: conftest.py  test_agent_runner.py  test_integrations_c11_parsing.py  test_integrations_cmux_parsing.py  test_update_check.py
tests/fixtures/: claude_md_block_stage11_snapshot.md  fake_agent.py
tests/fixtures/structure/: events.jsonl  structure.json
tests/test_cli/: test_archive_cmds.py  test_artifact_cmds.py  test_auto_fire_status.py  test_auto_review.py  test_init.py  test_init_presets.py  test_integration.py  test_migrate.py  test_needs_human_flag.py  test_next_cmd.py  test_review_cmds.py  test_review_config.py  test_task_cmds.py  test_task_status.py
tests/test_core/: test_agent_spawn.py  test_agent_spawn_headless.py  test_agent_spawn_reuse.py  test_auto_review.py  test_claude_md_render.py  test_config.py  test_events.py  test_next.py  test_review.py  test_short_ids.py  test_status_presets.py  test_tasks.py
tests/test_dashboard/: test_structure_api.py
tests/test_mcp/: test_completion_policy.py
tests/test_storage/: test_concurrency.py  test_fs.py  test_root_discovery.py
