# Lattice: a file-based, agent-native task tracker with an event-sourced core.
# Built by Stage 11 Agentics for autonomous agent teams. Dogfoods itself.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice-tracker"
version = "0.2.1"
description = "Task tracking with agent-native assumptions, based on the file system."
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Stage 11 Agentics", email = "hello@stage11agentics.com" },
]
keywords = ["task-tracker", "agent", "ai", "event-sourcing", "cli", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "python-ulid>=2.0",
    "filelock>=3.13",
    "typing_extensions>=4.0; python_version<'3.14'",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.25,<2",
]
dev = [
    "hypothesis>=6.100",
    "mcp>=1.25,<2",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
]

[project.scripts]
lattice = "lattice.cli.main:cli"
lattice-mcp = "lattice.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Stage-11-Agentics/lattice"
Repository = "https://github.com/Stage-11-Agentics/lattice"
Issues = "https://github.com/Stage-11-Agentics/lattice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 15
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "timeout: marks tests with a timeout",
]

# mypy: relaxed from strict=true (LAT-228). The codebase was never annotated
# to the strict bar — 559 errors across 44 files when strict was on, so the
# gate was nominal-only.
#
# Dropping `strict = true` turns off `disallow_any_generics` /
# `disallow_untyped_decorators` / `disallow_untyped_defs`, which eliminates
# ~430 of the 559 errors (the type-arg / untyped-decorator / no-untyped-def
# categories). The remaining ~120 errors are listed in `disable_error_code`
# below, with per-code rationale.
#
# We keep the cheap, real-signal checks: no_implicit_optional (catches
# `def f(x: int = None)` PEP-484 foot-guns), check_untyped_defs (still
# type-checks bodies of unannotated functions), warn_return_any,
# warn_unused_configs.
#
# Re-tighten per-module via [[tool.mypy.overrides]] as files get cleaned
# up. A future strict-mode-restoration is its own ticket.
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disable_error_code = [
    "arg-type",        # 60 — dict-as-config calls, no precise contract
    "no-any-return",   # 33 — typed funcs returning untyped dicts/JSON
    "index",           #  8 — Click ctx.obj accessed dict-style
    "union-attr",      #  2 — None-check noise around optional reads
    "dict-item",       #  2 — TypedDict vs plain dict assignment
    "assignment",      #  2 — Optional vs non-Optional re-assignment
    "no-redef",        #  2 — pre-existing variable shadowing
    "valid-type",      #  2 — `callable` annotations (legacy; cheap future fix)
    "var-annotated",   #  1 — empty list needs explicit annotation
    "typeddict-item",  #  1
    "return-value",    #  1
    "misc",            #  1
    "import-untyped",  #  1 — pyyaml stubs not installed
    "attr-defined",    #  1 — Click ctx.obj attr access
]
packages = ["lattice"]
mypy_path = ["src"]

[tool.ruff]
src = ["src"]
line-length = 99
